@@ -2,6 +2,8 @@
 
 ## 1.7 - Unreleased
 - Autocompletion for the list/add/move commands (that’s incredibly useful!)
+- If a link is found in plain text in a gopher/gemini page, it is now
+  added to the list of links for that page. Useful for gopher.
 - Create system lists when needed to avoid failure on clean system
 - Solve a crash when parsing wrong URL (related to bug #9 )
 - Solve a crash when loading webpages with empty links
